# prototype-data-analysis

./: README.md  external_stylesheets.py  header.py  index_string.py  main.py  pyproject.toml  requirements.txt
assets/: dashAgGridComponentFunctions.js
data/: product-specification.csv  responses.csv
pages/: home.py  impact.py  scenario.py  target_market.py
pages/helpers/: transform_product_specifications.py
