[project]
name = "data"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dash>=3.0.4",
    "dash-ag-grid>=31.3.1",
    "dash-bootstrap-components>=2.0.3",
    "numpy>=2.2.6",
    "pandas>=2.2.3",
    "pydeck>=0.9.1",
    "ruff>=0.11.11",
    "streamlit>=1.45.1",
]
